版本1.7 1) 修复了音频播放器的状态管理问题，确保在不同场景下音频能够正确播放和停止 2) 统一了主窗口和预览窗口的鼠标移动停止铃声逻辑 3) 分离了首次加载默认铃声和后续切换铃声的逻辑，避免相互干扰。这些改进提高了程序的稳定性和用户体验

--- a/CountdownGo.csproj
+++ b/CountdownGo.csproj
@@ -15,6 +15,9 @@
     <None Update="ahh.mp3">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Sounds\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
