--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="LastSelectedSound" Type="System.String" Scope="User">
-      <Value Profile="(Default)">ahh.mp3</Value>
+      <Value Profile="(Default)">Apple beep.mp3</Value>
     </Setting>
   </Settings>
 </SettingsFile>
